deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: graceful-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: graceful-demo
  template:
    metadata:
      labels:
        app: graceful-demo
    spec:
      terminationGracePeriodSeconds: 60
      containers:
      - name: graceful-demo-nginx
        image: slofurno/graceful-demo-nginx
        ports:
          - containerPort: 80
      - name: graceful-demo
        image: slofurno/graceful-demo:13
        ports:
          - containerPort: 1234
        readinessProbe:
          httpGet:
            path: /ready
            port: 1234
          periodSeconds: 5
          failureThreshold: 1
---

kind: Service
apiVersion: v1
metadata:
  name: graceful-demo
  labels:
    app: graceful-demo
  annotations:
    cloud.google.com/backend-config: '{"ports": {"80":"graceful-demo-backendconfig"}}'

spec:
  type: NodePort
  selector:
    app: graceful-demo
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80


---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: graceful-demo-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: graceful-demo
          servicePort: 80
